--- a/Presentation/E-CommerceAPI.API/appsettings.json
+++ b/Presentation/E-CommerceAPI.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgreSql": "User ID=postgres;Password=123456;Host=localhost;Port=5432;Database=ECommerceDb;"
+  }
 }
