--- a/Core/E-CommerceAPI.Application/E-CommerceAPI.Application.csproj
+++ b/Core/E-CommerceAPI.Application/E-CommerceAPI.Application.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\E-CommerceAPI.Domain\E-CommerceAPI.Domain.csproj" />
   </ItemGroup>
 
