--- a/Presentation/E-CommerceAPI.API/E-CommerceAPI.API.csproj
+++ b/Presentation/E-CommerceAPI.API/E-CommerceAPI.API.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\images\product-images\" />
   </ItemGroup>
 
 </Project>
