--- a/Core/E-CommerceAPI.Application/E-CommerceAPI.Application.csproj
+++ b/Core/E-CommerceAPI.Application/E-CommerceAPI.Application.csproj
@@ -18,4 +18,9 @@
     <ProjectReference Include="..\E-CommerceAPI.Domain\E-CommerceAPI.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Abstraction\Storage\Azure\" />
+    <Folder Include="Abstraction\Storage\AWS\" />
+  </ItemGroup>
+
 </Project>
